--- a/src/components/Reusable/Drop-Down-Menu/dropdown-menu.module.css
+++ b/src/components/Reusable/Drop-Down-Menu/dropdown-menu.module.css
@@ -31,7 +31,7 @@
   width: 100%;
 }
 
-.dropdownMenu {
+/* .dropdownMenu {
   position: absolute;
   top: 30px;
   right: 0;
@@ -43,6 +43,17 @@
   width: auto;
   z-index: 10;
   text-align: center;
+  white-space: nowrap;
+} */
+
+.dropdownMenu {
+  background-color: white;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.12);
+  border-radius: 6px;
+  padding: 6px 0;
+  width: fit-content;
+  max-width: 200px;
+  overflow-x: hidden;
   white-space: nowrap;
 }
 
