--- a/src/components/Bus-Management-Content/Add-Bus-Details/Step1/step1.module.css
+++ b/src/components/Bus-Management-Content/Add-Bus-Details/Step1/step1.module.css
@@ -17,6 +17,13 @@
 
 @media screen and (max-width: 1450px) {
   .addBusGrid {
+    /* grid-template-columns: 100%; */
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .addBusGrid {
     grid-template-columns: 100%;
   }
 }
