--- a/src/components/Reusable/Table/data-table.module.css
+++ b/src/components/Reusable/Table/data-table.module.css
@@ -27,7 +27,7 @@
 }
 
 tr {
-  cursor: pointer;
+  cursor: context-menu;
 }
 
 .selectedRow {
@@ -85,6 +85,7 @@ tr {
   text-decoration: underline;
   color: #3087cf;
   font-size: clamp(18px, 1.7vw, 20px);
+  cursor: pointer;
 }
 
 .linkText {
