Sidebar issue fixed

--- a/src/components/SideBar-New/sidebar-new.module.css
+++ b/src/components/SideBar-New/sidebar-new.module.css
@@ -16,18 +16,6 @@
   overflow-x: hidden; */
 }
 
-.sidebar.open {
-  border-top-right-radius: 20px;
-  border-bottom-right-radius: 20px;
-  width: 310px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 17px 0 0;
-  margin-top: 0px;
-  z-index: 100;
-}
-
 .nav {
   display: flex;
   flex-direction: column;
@@ -95,10 +83,10 @@
   border-width: 15px 15px 15px 0;
   border-color: transparent #dae9e2e6 transparent transparent;
   top: 50%;
-  right: -15px; /* Moves it outside the sidebar */
+  right: -15px;
   transform: translateY(-50%) rotate(180deg);
-  z-index: 300; /* Higher than sidebar */
-  pointer-events: none; /* Avoid unwanted interactions */
+  z-index: 300;
+  pointer-events: none;
   clip-path: inset(0 -20px 0 0);
 }
 
@@ -124,13 +112,20 @@
   .sidebar {
     transform: translateX(-100%);
     width: 260px;
+    overflow: visible;
   }
 
   .sidebar.open {
     transform: translateX(0);
+    z-index: 999;
+    margin-top: 0px;
   }
 
   .navText {
     opacity: 1;
+  }
+
+  .sidebar:not(.open) .navItem.active::after {
+    display: none;
   }
 }
