--- a/src/components/Reusable/Input-Field/input-field.module.css
+++ b/src/components/Reusable/Input-Field/input-field.module.css
@@ -49,3 +49,20 @@
 .inputContainerRow label {
   color: #000;
 }
+
+.inputWrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.inputWrapper input {
+  flex: 1;
+  /* padding-right: 2rem; */
+}
+
+.icon {
+  position: absolute;
+  right: 0.5rem;
+  cursor: pointer;
+}
