--- a/src/components/Wallet-Content/Transaction-History/Table/transaction-table.module.css
+++ b/src/components/Wallet-Content/Transaction-History/Table/transaction-table.module.css
@@ -108,7 +108,7 @@
   justify-content: flex-end;
   align-items: center;
   gap: 10px;
-  display: none;
+  /* display: none; */
 }
 
 .paginationButton {
