--- a/src/components/Ticket-Content/Bus-Routes-With-Date/bus-routes-date.module.css
+++ b/src/components/Ticket-Content/Bus-Routes-With-Date/bus-routes-date.module.css
@@ -114,3 +114,36 @@
   display: flex;
   align-items: center;
 }
+
+.searchBox {
+  background: none;
+  border: none;
+}
+
+.searchIcon {
+  color: #2b6246;
+  cursor: pointer;
+}
+
+.clearSearchBtn {
+  background-color: #2b6246;
+  color: white;
+  padding: 10px 18px;
+  border-radius: 8px;
+  font-weight: 600;
+  border: none;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  font-size: 14px;
+  /* box-shadow: 0 2px 6px rgba(34, 197, 94, 0.3); */
+}
+
+.clearSearchBtn:hover {
+  background-color: #2b6246;
+  /* box-shadow: 0 4px 12px rgba(34, 197, 94, 0.4); */
+  /* transform: translateY(-1px); */
+}
+
+/* .clearSearchBtn:active {
+  transform: scale(0.96);
+} */
