--- a/src/components/Dashboard-Content/Custom-Pie-Chart/custom-pie-chart.module.css
+++ b/src/components/Dashboard-Content/Custom-Pie-Chart/custom-pie-chart.module.css
@@ -37,6 +37,18 @@
   gap: 35px;
 }
 
+.noDataMsg {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #777;
+  font-size: 14px;
+  font-weight: 500;
+  text-align: center;
+}
+
 @media screen and (max-width: 1800px) {
   .chartWrapper {
     width: 70%;
